fix: a11y toc invisible nested h3 ol

--- a/src/assets/css/7-components/_toc.scss
+++ b/src/assets/css/7-components/_toc.scss
@@ -21,5 +21,9 @@ nav.toc {
         a {
             font-weight: 600;
         }
+
+        ol { // nested empty h3+ "ol" - accessibility hack
+            display: none;
+        }
     }
 }
